Compensate for fixed navigation height on smaller screens

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -2,8 +2,8 @@
 
 .container {
     max-width: 1280px;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
     margin: auto;
 }
 
@@ -13,3 +13,16 @@
         padding-right: 2rem;
     }
 }
+
+
+/* Main */
+
+main {
+    margin-top: 70px; /* Push down to compensate for fixed nav*/
+}
+
+    @screen md {
+        main {
+            margin-top: 0;
+        }
+    }
